--- a/public/style.css
+++ b/public/style.css
@@ -9,35 +9,102 @@ a {
   text-decoration: none;
 }
 
-nav {
-  background-color: #c4c4c4;
-  height: 3.5em;
+.navbar {
+  background-color: #2c3437;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 40px;
 }
-
-nav a {
-  margin: 1em;
-  position: relative;
-  top: 1.25em;
+.nav-list {
+  list-style: none;
+  margin-right: 2rem;
+  text-decoration: none;
+  color: white;
+  transition: all 200ms ease-in;
+  cursor: pointer;
+}
+.rules-btn {
+  font-family: sans-serif;
+  font-size: 1rem;
+  background-color: #2c3437;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: all 200ms ease-in;
+}
+#rules-comp {
+  position: absolute;
+  background-color: #2c3437;
+}
+#center-logo {
+  margin-left: auto;
+  margin-right: auto;
+}
+#github-logo {
+  width: 30px;
+  object-fit: contain;
+}
+.nav-list:last-child {
+  margin-left: auto;
+  margin-right: 2rem;
 }
 
 .welcome-message {
-  background-color: #c4c4c4;
-  width: 11em;
+  background-color: #2c3437;
+  width: 15em;
   padding: 15em;
   margin: 3em auto;
 }
-
-.rules {
-  background-color: #c4c4c4;
-  width: 25em;
-  padding: 2em;
-  margin: 3em auto;
+.typewriter {
+  margin: 0;
+  padding: 0;
+  font-family: Courier, monospace;
+  display: inline-block;
 }
 
-.join-form {
+.typewriter-text {
+  color: white;
+  display: inline-block;
+  overflow: hidden;
+  letter-spacing: 2px;
+  animation: typing 5s steps(30, end), blink 0.75s step-end infinite;
+  white-space: wrap;
+  font-size: 30px;
+  font-weight: 700;
+  border-right: 4px solid orange;
+  box-sizing: border-box;
+}
+
+@keyframes typing {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
+}
+
+.join-create-form {
   width: 35em;
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+}
+
+.form-w-title {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .name-label {
@@ -57,7 +124,7 @@ nav a {
 .create-room-btn {
   padding: 0.5em;
   width: 9.75em;
-  margin: 1em 16.5em;
+  margin: 1em;
   border: 0.125em blue solid;
   border-radius: 0.25em;
 }
@@ -71,10 +138,37 @@ nav a {
 }
 
 .lobby-container {
-  width: 20em;
-  margin: 0 auto;
+  display: flex;
+  margin-top: 30px;
 }
 
+.table {
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: flex-start;
+  align-items: center;
+  height: 40px;
+}
+#abv-table {
+  padding-bottom: 0em;
+  display: flex;
+}
+#below-table {
+  padding-top: 0em;
+  display: flex;
+}
+#table-img {
+  display: block;
+  margin: -100px 0px -100px 0px;
+}
+.seat {
+  display: inline;
+  list-style: none;
+  margin-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
 .player {
   display: inline-block;
   margin: 5em 0.75em;
@@ -85,11 +179,11 @@ nav a {
 }
 
 .start-game-btn {
-  width: 20em;
+  /* width: 20em;
   margin: 0 auto;
   position: relative;
   top: -16em;
-  right: -6em;
+  right: -6em; */
 }
 .prompt-container {
   display: flex;
@@ -110,4 +204,44 @@ nav a {
   margin: 3em 0 0 2em;
   display: flex;
   flex-direction: column;
+}
+
+#chat-comp {
+  margin-left: auto;
+  margin-right: 2rem;
+  position: absolute;
+  background-color: #2c3437;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 40px;
+  width: 100%;
+  background-color: #2c3437;
+  text-align: center;
+}
+
+.footer-list {
+  display: flex;
+  list-style: none;
+  margin-right: 2rem;
+  text-decoration: none;
+  color: white;
+  transition: all 200ms ease-in;
+  cursor: pointer;
+}
+
+.chat-btn {
+  display: flex;
+  font-family: sans-serif;
+  font-size: 1rem;
+  background-color: #2c3437;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: all 200ms ease-in;
+  margin-left: auto;
+  margin-right: 2rem;
+  margin-top: 1rem;
 }
