--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 body {
+  background-color: #d1d3d4;
   font-family: sans-serif;
 }
 
@@ -9,13 +10,6 @@ a {
   text-decoration: none;
 }
 
-.navbar {
-  background-color: #2c3437;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  height: 40px;
-}
 .hostbar {
   background-color: #6d8790;
   display: flex;
@@ -23,28 +17,8 @@ a {
   align-items: center;
   height: 40px;
 }
-.nav-list {
-  list-style: none;
-  margin-right: 2rem;
-  text-decoration: none;
-  color: white;
-  transition: all 200ms ease-in;
-  cursor: pointer;
-}
-.rules-btn {
-  font-family: sans-serif;
-  font-size: 1rem;
-  background-color: #2c3437;
-  color: white;
-  border: none;
-  cursor: pointer;
-  transition: all 200ms ease-in;
-}
-#rules-comp {
-  position: absolute;
-  background-color: #2c3437;
-}
-#center-logo {
+
+/* #center-logo {
   position: relative;
   margin-left: auto;
   margin-right: 0 auto;
@@ -52,14 +26,14 @@ a {
 #github-logo {
   width: 30px;
   object-fit: contain;
-}
+} */
 .nav-list:last-child {
   margin-left: auto;
   margin-right: 2rem;
 }
 
 .welcome-message {
-  background-color: #2c3437;
+  background-color: #0e0700;
   width: 15em;
   padding: 15em;
   margin: 3em auto;
