--- a/client/styles/Welcome.module.css
+++ b/client/styles/Welcome.module.css
@@ -1,10 +1,11 @@
 .welcomeMessage {
-  background-color: #0e0700;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: none;
   color: white;
-  width: 15em;
-  padding: 15em;
-  margin: 3em auto;
 }
+
 .typewriter {
   margin: 0;
   padding: 0;
@@ -24,13 +25,48 @@
   overflow: hidden;
   letter-spacing: 2px;
   animation: typing 5s steps(30, end), blink 0.75s step-end infinite;
-  white-space: wrap;
+  white-space: nowrap;
   font-size: 30px;
   font-weight: 700;
   border-right: 4px solid orange;
   box-sizing: border-box;
   position: relative;
-  left: -7em;
+}
+.typewriterText2 {
+  color: white;
+  display: inline-block;
+  overflow: hidden;
+  letter-spacing: 2px;
+  animation: hide 5s steps(30, end), typing 5s steps(30, end) 5s,
+    blink 0.75s step-end infinite, pause-between-iterations 5s;
+  white-space: nowrap;
+  font-size: 30px;
+  font-weight: 700;
+  border-right: 4px solid orange;
+  box-sizing: border-box;
+  position: relative;
+}
+@keyframes pause-between-iterations {
+  100% {
+    opacity: 0;
+  }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes hide {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 0%;
+  }
 }
 
 @keyframes typing {
