Seeded new easy questions; styled messager component

--- a/client/styles/Button.module.css
+++ b/client/styles/Button.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 3rem;
   right: 5em;
-  color: black;
+  color: rgb(34, 99, 112);
   border-style: outset;
   background-color: transparent;
   border-color: transparent;
