fixed submit button placement.  changed placement of passed and failed users. changed margin for editor divs. added background color to body

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #d1d3d4;
+  background-color: #021c2e;
   font-family: sans-serif;
 }
 
@@ -103,22 +103,39 @@ a {
   flex-direction: row;
   flex-wrap: wrap;
 }
+
 .prompt-solution {
   display: flex;
   flex-direction: column;
-  margin: 3em 0 0 2em;
+  margin: 1em 0 0 2em;
   width: 35vw;
-  height: 80vh;
+  height: 75vh;
 }
 .submit-prompt-button {
-  position: relative;
-  top: -3em;
-  width: 80%;
-}
-.finished-submission-list {
-  margin: 3em 0 0 2em;
   display: flex;
   flex-direction: column;
+  margin: 0.5em 0 0 2em;
+}
+.finished-submission-list {
+  margin: 1em 0 0 2em;
+  display: flex;
+  flex-direction: column;
+}
+.passed-users {
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
+.failed-users {
+  margin-top: 7em;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
+.user-container {
+  height: 2em;
+  width: 10em;
+  border: 0.25 solid black;
 }
 
 #chat-comp {
