--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,13 @@
 * {
   box-sizing: border-box;
 }
+
+html,
 body {
-  background-color: #021c2e;
   font-family: sans-serif;
+
+  width: 100%;
+  height: 100%;
 }
 
 a {
@@ -111,6 +115,14 @@ a {
   width: 35vw;
   height: 75vh;
 }
+
+#mochaTester {
+  display: flex;
+  flex-direction: column;
+  margin: 1em 0 0 2em;
+  width: 35vw;
+  height: 75vh;
+}
 .submit-prompt-button {
   display: flex;
   flex-direction: column;
@@ -178,6 +190,15 @@ a {
   transition: all 200ms ease-in;
   margin-left: auto;
   margin-right: 2rem;
+}
+
+#bgVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
 }
 
 /* .messages {
