--- a/client/styles/Chat.module.css
+++ b/client/styles/Chat.module.css
@@ -9,7 +9,7 @@
 }
 
 .messages {
-  background-color: rgb(34, 99, 112);
+  background-color: rgba(34, 99, 112, 0.4);
   height: 3.3em;
   list-style-type: none;
   margin: 0.15em;
@@ -20,10 +20,11 @@
   display: flex;
   flex-direction: row;
   color: white;
+  border: 0.1em solid;
 }
 
 .myMessage {
-  background-color: rgb(255, 99, 71);
+  background-color: rgba(255, 99, 71, 0.4);
   height: 3.3em;
   list-style-type: none;
   margin: 0.15em;
@@ -35,6 +36,7 @@
   display: flex;
   flex-direction: row;
   color: white;
+  border: 0.1em solid;
 }
 
 #listDiv {
