added additionanl styling for prompt and voting component

--- a/client/styles/Prompt.module.css
+++ b/client/styles/Prompt.module.css
@@ -1,7 +1,6 @@
 .promptContainer {
   display: flex;
   flex-direction: row;
-  /* flex-wrap: wrap; */
 }
 
 .promptSolution {
@@ -20,9 +19,7 @@
 
 .finishedSubmissionList {
   display: flex;
-
   margin: 1em 0 0 1.5em;
-
   height: 26em;
   width: 24em;
   background-color: rgba(28, 28, 28, 0.5);
@@ -30,33 +27,23 @@
 }
 
 .passedUsers {
-  /* display: inline-block; */
-
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
   color: rgb(205, 133, 111);
-  /* padding-right: 11.5em; */
   position: relative;
   left: 3.75em;
 }
 
 .failedUsers {
-  /* display: inline-block; */
-  /* margin-top: 7em;
-  position: relative;
-  top: -6.75em; */
-
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
   color: rgb(205, 133, 111);
   position: relative;
-
   right: -12em;
 }
 
 .divider {
   border-left: 1px solid rgba(28, 128, 145, 0.5);
-
   height: 25.875em;
   margin-left: 4.5em;
 }
@@ -72,7 +59,8 @@
   margin-bottom: -4em;
 }
 
-h4 {
+.passedUsers,
+.failedUsers > h4 {
   position: relative;
   top: -2.5em;
 }
