update start game position

--- a/client/styles/Navbar.module.css
+++ b/client/styles/Navbar.module.css
@@ -66,8 +66,17 @@
 }
 
 #centerLogo {
+  list-style: none;
+  width: 50%;
+  text-decoration: none;
+  color: white;
+  transition: all 200ms ease-in;
+  cursor: pointer;
+  font-family: 'Monaco', 'Courier New', monospace;
+  font-size: 1rem;
   position: relative;
-  margin: auto;
+  top: 0em;
+  right: 1em;
 }
 
 #githubLogo {
