initial styling, setup for chat

--- a/client/styles/Chat.module.css
+++ b/client/styles/Chat.module.css
@@ -1,95 +1,68 @@
 #partyChat {
   color: rgb(255, 99, 71);
-  padding-top: 0;
-  margin-top: -0.05em;
   font-family: fantasy, monospace;
-  font-size: 3em;
+  font-size: 2em;
   text-align: center;
   letter-spacing: 0.25em;
+  background-color: none;
 }
 
 .messages {
-  background-color: rgba(34, 99, 112, 0.4);
-  height: 3.3em;
+  display: inline-block;
+  max-width: 23em;
+  height: 1em;
   list-style-type: none;
-  margin: 0.15em;
-  margin-left: 0.05em;
-  padding: 1em;
-  border-radius: 2.25em;
   font-family: 'Monaco', 'Courier New', monospace;
-  display: flex;
-  flex-direction: row;
   color: white;
-  border: 0.1em solid;
+  text-align: left;
 }
 
 .myMessage {
-  background-color: rgba(255, 99, 71, 0.4);
-  height: 3.3em;
+  display: inline-block;
+  max-width: 23em;
+  height: 1em;
   list-style-type: none;
-  margin: 0.15em;
-  margin-left: -1.95em;
-  padding: 1em;
-  margin-right: 4.55em;
-  border-radius: 1.25em;
   font-family: 'Monaco', 'Courier New', monospace;
-  display: flex;
-  flex-direction: row;
   color: white;
-  border: 0.1em solid;
+  text-align: right;
+  padding: 1em;
 }
 
 #listDiv {
-  background-color: #000000d4;
-  border-radius: 1.5em;
-  height: 24em;
   overflow-y: auto;
-  overflow-x: auto;
+  height: 23em;
+  max-width: 30em;
 }
 
 #messageForm {
-  position: absolute;
-  bottom: 1em;
+  margin: 0.5em;
 }
 
-.input {
+input {
   color: white;
-  background-color: #348b9d;
-  padding: 1em;
+  background-color: none;
   position: sticky;
-  height: 2em;
-  font-size: 1.15em;
-  width: 19em;
+  font-size: 0.75em;
+  margin: 0.5em;
+  width: 82.5%;
   font-family: 'Monaco', 'Courier New', monospace;
-  border-radius: 1em;
 }
 
 #chatComp {
-  background-color: #000e07b8;
-  padding: 1em;
+  background-color: none;
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
 .submit {
-  background-color: #8b8b8b;
-  width: 4em;
+  margin: 0.5em;
   height: 3em;
-  border-radius: 2.25em;
+  width: 3em;
 }
 
 #chatList {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
-}
-
-.listUser {
-  text-align: center;
-  flex-grow: 1;
-}
-
-.listMessage {
-  text-align: center;
-  flex: 9;
 }
