--- a/client/styles/Welcome.module.css
+++ b/client/styles/Welcome.module.css
@@ -12,12 +12,6 @@
   font-family: Courier, monospace;
   display: inline-block;
 }
-.typewriter {
-  margin: 0;
-  padding: 0;
-  font-family: Courier, monospace;
-  display: inline-block;
-}
 
 .typewriterText {
   color: white;
@@ -28,7 +22,7 @@
   white-space: nowrap;
   font-size: 30px;
   font-weight: 700;
-  border-right: 4px solid orange;
+  border-right: 4px solid #ff6347;
   box-sizing: border-box;
   position: relative;
 }
@@ -42,7 +36,7 @@
   white-space: nowrap;
   font-size: 30px;
   font-weight: 700;
-  border-right: 4px solid orange;
+  border-right: 4px solid #ff6347;
   box-sizing: border-box;
   position: relative;
 }
