--- a/client/styles/Prompt.module.css
+++ b/client/styles/Prompt.module.css
@@ -51,15 +51,9 @@
   margin-left: 4.5em;
 }
 
-.passedUserContainer {
-  position: relative;
-  top: -3em;
-  margin-bottom: -4em;
-}
 .failedUserContainer {
   position: relative;
-  top: -3em;
-  margin-bottom: -4em;
+  top: -2.5em;
 }
 
 .passedUsers,
@@ -87,11 +81,7 @@
   line-height: 78px;
   font-size: 20px;
   font-family: 'Bebas Neue', sans-serif;
-  background: linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.75) 5%,
-    rgba(1, 1, 1, 0.75) 5%
-  );
+  background: linear-gradient(45deg, rgba(255, 255, 255, 0.75) 5%, rgba(1, 1, 1, 0.75) 5%);
   border: 0;
   color: #fff;
   letter-spacing: 3px;
@@ -127,13 +117,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(
-    45deg,
-    transparent 3%,
-    #ffffff 3%,
-    #1531af 5%,
-    #1aa71a 5%
-  );
+  background: linear-gradient(45deg, transparent 3%, #ffffff 3%, #1531af 5%, #1aa71a 5%);
   text-shadow: -3px -3px 0px #f8f005, 3px 3px 0px #62dd57;
   clip-path: var(--slice-0);
 }
